<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sketch" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText android:id="@+id/sketch_content"
                android:hint="@string/sketch_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:background="@null"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="20"
                android:layout_weight="9"/>

            <TextView android:id="@+id/calendar_sketch"
                android:text="日期显示位置"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_marginRight="2dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sketch_mark" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_mark_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TextView
            android:id="@+id/textView_mark_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sketch_add_mark" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button android:id="@+id/button_sketch_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sketch_save" />
    </LinearLayout>


</LinearLayout>